--- a/Project_SAD/css/login.css
+++ b/Project_SAD/css/login.css
@@ -70,13 +70,13 @@ ul {
     .nav-icon{
       margin-left: 20px;
       height: auto;
-      width: 70px;
+      width: 60px;
     }
  
 
     .Register {
       color: black;
-      border: .2px solid black;
+      border: 1px solid #ddd;
       margin-left: 8px;
       font-weight: 16px;
       width: 91px;
@@ -87,7 +87,7 @@ ul {
     }
     .Signin{
       color: white;
-      border: .2px solid black;
+      border: 1px solid #ddd;
       margin-left: 8px;
       font-weight: 16px;
       width: 91px;
@@ -99,7 +99,7 @@ ul {
     }
     .Register2{
       color: white;
-      border: .2px solid black;
+      border: 1px solid #ddd;
       margin-left: 8px;
       font-weight: 16px;
       width: 91px;
@@ -220,4 +220,17 @@ input::-webkit-input-placeholder {
 .a1:hover,.a2:hover{
   text-decoration: none;
   opacity: .7;
+}
+
+.toggle-password {
+  top: 95%;
+  left: 74.3%;
+  position: absolute;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+.button-span{
+  color: #f5f5f5;
 }
